feature: Добавлен парсер для олдтаймер фарм
